@startuml class
title リスト4.25におけるクラス図

class Member {
	-HitPoint hitPoint
	-States states
	+void damage(int)
}

class HitPoint {
	{static} +int MIN = 0
	-int amout
	+HitPoint(int)
	+void damage(int)
	+boolean isZero()
}
note top of HitPoint
	ヒットポイントを管理するクラス
end note
note right of HitPoint::isZero()
	ヒットポイントが0ならば、true
	それ以外ならば、false
end note

class States {

}

Member *-- HitPoint : コンポジション
Member *-- States : コンポジション

@enduml
